fixed whitespace problem with list

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -294,6 +294,10 @@ color: $text;
   background-image: url('/images/loader.gif') !important;
   
 }
+table.centered tbody tr td {
+  text-align: center;
+  width: 70px;
+}
 
 
 .btn{ /* ff3.6+ */
